--- a/cluster/tanzu-cluster-1.19.yaml
+++ b/cluster/tanzu-cluster-1.19.yaml
@@ -2,7 +2,7 @@ apiVersion: run.tanzu.vmware.com/v1alpha1
 kind: TanzuKubernetesCluster
 metadata:
   name: new-tkc1
-  namespace: cnd-infra
+  namespace: ca-test
 spec:
   distribution:
     version: 1.19.7+vmware.1-tkg.1.fc82c41
