--- a/tkg-extensions-v1.2.0+vmware.1/extensions/monitoring/prometheus/prometheus-httpproxy.yaml
+++ b/tkg-extensions-v1.2.0+vmware.1/extensions/monitoring/prometheus/prometheus-httpproxy.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   virtualhost:
     fqdn: pro.cnd.lab
-    tls:
-      secretName: cnd-tls/wild-tls
+    # tls:
+    #   secretName: cnd-tls/wild-tls
   routes:
     - conditions:
       - prefix: /
