--- a/tkg-extensions-v1.2.0+vmware.1/extensions/monitoring/grafana/vsphere/grafana-data-values.yaml
+++ b/tkg-extensions-v1.2.0+vmware.1/extensions/monitoring/grafana/vsphere/grafana-data-values.yaml
@@ -57,7 +57,7 @@ monitoring:
     secret:
       type: "Opaque"
       admin_user: "YWRtaW4="
-      admin_password: "Vk13YXJlMSEK"
+      admin_password: "Vk13YXJlMSE="
       ldap_toml: ""
     deployment:
       replicas: 1
