--- a/cluster/tanzu-cluster-1.19.yaml
+++ b/cluster/tanzu-cluster-1.19.yaml
@@ -1,8 +1,8 @@
 apiVersion: run.tanzu.vmware.com/v1alpha1
 kind: TanzuKubernetesCluster
 metadata:
-  name: ingress-lb
-  namespace: tmp
+  name: cnd-cluster
+  namespace: cnd-infra
 spec:
   distribution:
     version: 1.19.7+vmware.1-tkg.1.fc82c41
