--- a/jenkins/jenkins-deployment.yaml
+++ b/jenkins/jenkins-deployment.yaml
@@ -13,6 +13,9 @@ spec:
       labels:
         app: jenkins
     spec:
+      securityContext:
+        fsGroup: 1000
+        runAsUser: 1000
       containers:
       - name: jenkins
         image: jenkins/jenkins:lts-jdk11
@@ -20,7 +23,8 @@ spec:
         - containerPort: 8080
         volumeMounts:
         - name: jenkins-home
-          mountPath: /var/jenkins_home
+          mountPath: "/var/jenkins_home"
       volumes:
       - name: jenkins-home
-        emptyDir: { }
+        persistentVolumeClaim:
+          claimName: jenkins-pvc
