--- a/jboss/deployments.yaml
+++ b/jboss/deployments.yaml
@@ -18,7 +18,7 @@ spec:
       - name: ext-harbor
       containers:
       - name: wildfly
-        image: ext-harbor.cnd.lab/jboss/wildfly:v1.0
+        image: ext-harbor.nirs.lab/jboss/wildfly:v1.0
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -27,5 +27,3 @@ spec:
             cpu: "100m"
           limits:
             cpu: "300m"
-      nodeSelector:
-        key: worker
