--- a/cronjob/sample.yaml
+++ b/cronjob/sample.yaml
@@ -3,7 +3,8 @@ kind: CronJob
 metadata:
   name: hello
 spec:
-  schedule: "*/1 * * * *"
+#  schedule: "*/1 * * * *"
+  schedule: "0 * * * *"
   jobTemplate:
     spec:
       template:
